# Fisher

./: pyproject.toml
.github/: release.yml
.github/workflows/: tag.yml
src/Fisher/: __init__.py
src/Fisher/cogs/: CoreCog.py  __init__.py
src/Fisher/config/: bot.py  db.py  log.py
src/Fisher/core/: Fisher.py  cog.py  exceptions.py  singleton.py  translator.py
src/Fisher/db/: database.py  models.py
src/Fisher/utils/: discord_utils.py  log.py  view.py
