[tool.poetry]
name = "FisherBot"
version = "0.1.0"
description = ""
authors = ["ChaserZ98 <feiyuzheng98@gmail.com>"]
readme = "README.md"
packages = [{ include = "Fisher", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.3.2"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
